--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<script>
+try {
+  if (window.alt1 && alt1.identifyAppUrl) {
+    alt1.identifyAppUrl("https://hacza.github.io/RS3-Reset-Tracker.2/appconfig.json");
+  }
+} catch (e) {}
+</script>
+
 <!doctype html>
 <html>
 <head>
