--- a/index.html
+++ b/index.html
@@ -214,30 +214,62 @@ el("clearDone").onclick = () => { const a = getScopeArr(); for (let i=a.length-1
 el("resetScope").onclick = () => { if (!confirm("Uncheck all items on this tab?")) return; getScopeArr().forEach(x=>x.done=false); save(); renderList(); };
 
 <script>
-// Import all tasks from tasks.json (works in Alt1)
+<script>
+// --- LIVE IMPORT FROM DAILYSCAPE (no CORS issues) ---
 document.getElementById("importDailyScape").onclick = async () => {
+  const BTN = document.getElementById("importDailyScape");
+  const prev = BTN.textContent; BTN.textContent = "Importing…"; BTN.disabled = true;
   try {
-    const res = await fetch("https://hacza.github.io/RS3-Reset-Tracker.2/tasks.json?v=1");
-    if (!res.ok) throw new Error("tasks.json not found");
-    const data = await res.json(); // { daily:[], weekly:[], monthly:[] }
+    // Pull the canonical dataset (rsapidata) through a read-only mirror
+    // DailyScape keeps all tasks in rsdata.js -> var rsapidata = { daily, gathering, weeklies, monthlies, ... }
+    // We fetch it and eval ONLY the object literal.
+    const url = "https://r.jina.ai/https://dailyscape.github.io/rsdata/rsdata.js";
+    const raw = await fetch(url, { cache: "no-store" }).then(r => r.text());
 
+    // Extract the object literal assigned to rsapidata
+    const match = raw.match(/rsapidata\s*=\s*({[\s\S]*?});/);
+    if (!match) throw new Error("Couldn't find rsapidata in rsdata.js");
+
+    // Safely evaluate just the object literal
+    const ds = Function('"use strict"; return (' + match[1] + ')')();
+
+    // Normalize name+url pairs from various sections
+    const norm = (arr = []) => arr.map(x => ({
+      name: (x.name || x.item || x.title || "").trim(),
+      url:  (x.wiki || x.url || x.link || "").trim()
+    })).filter(t => t.name);
+
+    // DailyScape splits regular Dailies and "Daily Gathering" — merge both under our "daily" tab
+    const dailyAll   = [...norm(ds.daily), ...norm(ds.gathering || ds.dailyGathering)];
+    const weeklyAll  = norm(ds.weeklies || ds.weekly);
+    const monthlyAll = norm(ds.monthlies || ds.monthly);
+
+    const buckets = { daily: dailyAll, weekly: weeklyAll, monthly: monthlyAll };
+
+    // Merge into current profile without duplicates (by lowercase name)
     ["daily","weekly","monthly"].forEach(scope => {
-      const incoming = data[scope] || [];
+      const incoming = buckets[scope] || [];
       const here = state.profiles[getP()].items[scope];
+      const have = new Set(here.map(h => (h.name || "").toLowerCase()));
       incoming.forEach(t => {
-        if (!here.some(h => h.name.toLowerCase() === (t.name || "").toLowerCase())) {
-          here.push({ id: uid(), name: t.name || "", url: t.url || "", done: false });
-        }
+        const key = (t.name || "").toLowerCase();
+        if (!key || have.has(key)) return;
+        here.push({ id: uid(), name: t.name, url: t.url || "", done: false });
+        have.add(key);
       });
     });
 
     save(); renderList();
-    alert("Imported tasks from tasks.json");
+    alert("Imported the full DailyScape set into all tabs.");
   } catch (e) {
     console.error(e);
-    alert("Import failed (tasks.json missing or invalid).");
+    alert("Import failed. If it persists, tell me the first red error from F12 → Console.");
+  } finally {
+    BTN.textContent = prev; BTN.disabled = false;
   }
 };
+</script>
+
 </script>
 
 
