--- a/index.html
+++ b/index.html
@@ -55,260 +55,4 @@
 
     <div class="controls">
       <input id="addText" type="text" placeholder="Add task (optionally paste RS Wiki URL)"/>
-      <button id="addBtn" class="primary" type="button">Add</button>
-      <button id="clearDone" type="button">Clear Done</button>
-    </div>
-
-    <div class="controls" style="margin-top:6px;">
-      <button id="importDailyScape" type="button">Import from DailyScape</button>
-      <button id="resetScope" type="button">Reset This Tab</button>
-    </div>
-
-    <div class="list" id="list"></div>
-    <div class="small" style="margin-top:8px;">
-      Tip: Click the task name to edit. Drag to reorder (browser only). Progress auto-resets at UTC boundaries:
-      dailies 00:00 UTC; weeklies 00:00 UTC Wednesdays; monthlies 00:00 UTC day 1.
-    </div>
-  </div>
-
-  <div class="card">
-    <div class="small">Sources: DailyScape (task lists, ideas) and known RS reset times.</div>
-  </div>
-</div>
-
-<script>
-/* Confirm JS is running */
-document.getElementById("jsok").textContent = "JS: OK";
-
-/* Alt1 integration — hardcoded for this repo */
-try {
-  if (window.alt1 && alt1.identifyAppUrl) {
-    alt1.identifyAppUrl("https://hacza.github.io/RS3-Reset-Tracker.2/appconfig.json");
-  }
-} catch (e) {}
-
-/* ---------- State ---------- */
-const LS_KEY = "rs3_resets_tracker_v1";
-let state = load() || initDefault();
-let currentScope = "daily";
-
-/* ---------- Elements ---------- */
-const el = (id) => document.getElementById(id);
-const listEl = el("list");
-const tabs = Array.from(document.querySelectorAll(".tab"));
-
-/* ---------- Profiles ---------- */
-const profileSel = el("profile");
-function refreshProfiles() {
-  profileSel.innerHTML = "";
-  state.profiles.forEach((p,i) => {
-    const opt = document.createElement("option");
-    opt.value = i; opt.textContent = p.name; profileSel.appendChild(opt);
-  });
-  profileSel.value = state.currentProfile;
-}
-el("newProfile").onclick = () => {
-  const name = prompt("Profile name?","Main");
-  if (!name) return;
-  state.profiles.push(emptyProfile(name));
-  state.currentProfile = String(state.profiles.length-1);
-  save(); refreshProfiles(); render();
-};
-el("delProfile").onclick = () => {
-  if (state.profiles.length <= 1) return alert("Keep at least one profile.");
-  if (!confirm("Delete current profile?")) return;
-  const idx = +state.currentProfile;
-  state.profiles.splice(idx,1);
-  state.currentProfile = "0";
-  save(); refreshProfiles(); render();
-};
-profileSel.onchange = () => { state.currentProfile = profileSel.value; save(); render(); };
-
-/* ---------- Tabs ---------- */
-tabs.forEach(t => t.onclick = () => {
-  tabs.forEach(x=>x.classList.remove("active"));
-  t.classList.add("active");
-  currentScope = t.dataset.scope;
-  renderList();
-});
-
-/* ---------- Add & edit ---------- */
-el("addBtn").onclick = addItem;
-el("addText").addEventListener("keydown", e => { if (e.key === "Enter") addItem(); });
-function addItem() {
-  const txt = el("addText").value.trim();
-  if (!txt) return;
-  const m = txt.match(/https?:\/\/\S+/);
-  const name = txt.replace(/https?:\/\/\S+/,"").trim() || txt;
-  const url = m ? m[0] : "";
-  getScopeArr().push({ id: uid(), name, url, done:false });
-  el("addText").value = "";
-  save(); renderList();
-}
-
-/* ---------- List render (checkbox + delete + drag) ---------- */
-function renderList() {
-  const arr = getScopeArr();
-  listEl.innerHTML = "";
-  arr.forEach((it, idx) => {
-    const row = document.createElement("div");
-    row.className = "item"; row.draggable = true;
-
-    const cb = document.createElement("input");
-    cb.type = "checkbox"; cb.checked = !!it.done;
-    cb.onchange = () => { it.done = cb.checked; save(); };
-
-    const name = document.createElement("input");
-    name.value = it.name;
-    Object.assign(name.style,{flex:"1",background:"transparent",color:"#e9edf3",border:"0",outline:"none"});
-    name.onchange = () => { it.name = name.value.trim(); save(); };
-
-    const link = document.createElement("a");
-    link.href = it.url || "#";
-    link.textContent = it.url ? "Wiki" : "";
-    link.target = "_blank";
-
-    const del = document.createElement("button");
-    del.textContent = "Del";
-    del.style.padding = "6px 8px";
-    del.onclick = () => {
-      if (confirm(`Delete "${it.name}"?`)) {
-        arr.splice(idx, 1);
-        save(); renderList();
-      }
-    };
-
-    row.append(cb, name, link, del);
-
-    // drag-to-reorder
-    row.addEventListener("dragstart", e => e.dataTransfer.setData("text/plain", idx));
-    row.addEventListener("dragover", e => e.preventDefault());
-    row.addEventListener("drop", e => {
-      e.preventDefault();
-      const from = +e.dataTransfer.getData("text/plain");
-      const to = idx;
-      if (from===to) return;
-      const a = arr[from];
-      arr.splice(from,1); arr.splice(to,0,a);
-      save(); renderList();
-    });
-
-    listEl.appendChild(row);
-  });
-}
-
-/* ---------- Import EVERYTHING from DailyScape ---------- */
-/* This fetches the official data file (rsdata.js) from GitHub/CDNs, parses rsapidata, and merges all tasks. */
-document.getElementById("importDailyScape").onclick = async () => {
-  const BTN = document.getElementById("importDailyScape");
-  const prev = BTN.textContent; BTN.textContent = "Importing…"; BTN.disabled = true;
-
-  const SOURCES = [
-    "https://raw.githubusercontent.com/dailyscape/rsdata/main/rsdata.js",
-    "https://cdn.jsdelivr.net/gh/dailyscape/rsdata@main/rsdata.js",
-    "https://raw.githack.com/dailyscape/rsdata/main/rsdata.js",
-    "https://cdn.statically.io/gh/dailyscape/rsdata/main/rsdata.js"
-  ];
-
-  try {
-    let raw = null, used = null, lastErr = null;
-    for (const base of SOURCES) {
-      const url = base + "?t=" + Date.now(); // bust cache
-      try {
-        const r = await fetch(url, { cache: "no-store" });
-        if (!r.ok) throw new Error(r.status + " " + r.statusText);
-        raw = await r.text(); used = base; break;
-      } catch (e) { lastErr = e; }
-    }
-    if (!raw) throw new Error("All sources failed: " + (lastErr && lastErr.message));
-
-    const m = raw.match(/(?:var\s+)?rsapidata\s*=\s*({[\s\S]*?});/);
-    if (!m) throw new Error("Couldn't find rsapidata in rsdata.js (" + used + ")");
-
-    const ds = Function('"use strict"; return (' + m[1] + ')')();
-
-    const norm = (arr = []) => arr.map(x => ({
-      name: (x.name || x.item || x.title || "").trim(),
-      url:  (x.wiki || x.url || x.link || "").trim()
-    })).filter(t => t.name);
-
-    const dailyAll   = [...norm(ds.daily), ...norm(ds.gathering || ds.dailyGathering)];
-    const weeklyAll  = norm(ds.weeklies || ds.weekly);
-    const monthlyAll = norm(ds.monthlies || ds.monthly);
-
-    const buckets = { daily: dailyAll, weekly: weeklyAll, monthly: monthlyAll };
-
-    const added = { daily:0, weekly:0, monthly:0 };
-    ["daily","weekly","monthly"].forEach(scope => {
-      const incoming = buckets[scope] || [];
-      const here = state.profiles[getP()].items[scope];
-      const have = new Set(here.map(h => (h.name || "").toLowerCase()));
-      incoming.forEach(t => {
-        const key = (t.name || "").toLowerCase();
-        if (!key || have.has(key)) return;
-        here.push({ id: uid(), name: t.name, url: t.url || "", done: false });
-        have.add(key);
-        added[scope]++;
-      });
-    });
-
-    save(); renderList();
-    alert(`Imported from DailyScape\nAdded: ${added.daily} daily, ${added.weekly} weekly, ${added.monthly} monthly.`);
-  } catch (e) {
-    console.error(e);
-    alert("Import failed: " + e.message);
-  } finally {
-    BTN.textContent = prev; BTN.disabled = false;
-  }
-};
-
-/* ---------- Reset timers (UTC) ---------- */
-function nextDailyUTC(now=new Date())   { return new Date(Date.UTC(now.getUTCFullYear(), now.getUTCMonth(), now.getUTCDate()+1, 0,0,0)); }
-function nextWeeklyUTC(now=new Date())  { const day = now.getUTCDay(); const daysToWed = (3 - day + 7) % 7 || 7; return new Date(Date.UTC(now.getUTCFullYear(), now.getUTCMonth(), now.getUTCDate()+daysToWed, 0,0,0)); }
-function firstOfNextMonthUTC(now=new Date()) { const y=now.getUTCFullYear(), m=now.getUTCMonth(); return new Date(Date.UTC(m===11?y+1:y, (m+1)%12, 1, 0,0,0)); }
-
-function tickClocks() {
-  const now = new Date();
-  el("nextDaily").textContent   = eta(nextDailyUTC(now)-now);
-  el("nextWeekly").textContent  = eta(nextWeeklyUTC(now)-now);
-  el("nextMonthly").textContent = eta(firstOfNextMonthUTC(now)-now);
-  maybeReset("daily",   state.meta.lastDailyReset,   nextDailyUTC,   "lastDailyReset");
-  maybeReset("weekly",  state.meta.lastWeeklyReset,  nextWeeklyUTC,  "lastWeeklyReset");
-  maybeReset("monthly", state.meta.lastMonthlyReset, firstOfNextMonthUTC, "lastMonthlyReset");
-  requestAnimationFrame(tickClocks);
-}
-function maybeReset(scope, lastIso, nextFn, field) {
-  const now = new Date();
-  const last = lastIso ? new Date(lastIso) : new Date(0);
-  const next = nextFn(last);
-  if (now >= next) {
-    state.profiles[getP()].items[scope].forEach(x=>x.done=false);
-    state.meta[field] = now.toISOString();
-    save(); renderList();
-  }
-}
-function eta(ms) { if (ms<0) ms=0; const s=Math.floor(ms/1000); const h=String(Math.floor(s/3600)).padStart(2,"0"); const m=String(Math.floor((s%3600)/60)).padStart(2,"0"); const ss=String(s%60).padStart(2,"0"); return `${h}:${m}:${ss}`; }
-
-/* ---------- Helpers ---------- */
-function initDefault() {
-  return {
-    currentProfile: "0",
-    profiles: [emptyProfile("Main")],
-    meta: { lastDailyReset: new Date().toISOString(), lastWeeklyReset: new Date().toISOString(), lastMonthlyReset: new Date().toISOString() }
-  };
-}
-function emptyProfile(name) { return { name, items: { daily: [], weekly: [], monthly: [] } }; }
-function getP(){ return +state.currentProfile; }
-function getScopeArr(){ return state.profiles[getP()].items[currentScope]; }
-function uid(){ return Math.random().toString(36).slice(2,9); }
-function load(){ try { return JSON.parse(localStorage.getItem(LS_KEY)); } catch { return null; } }
-function save(){ localStorage.setItem(LS_KEY, JSON.stringify(state)); }
-
-/* ---------- Boot ---------- */
-refreshProfiles();
-render();
-function render(){ refreshProfiles(); tabs.forEach(t => t.classList.toggle("active", t.dataset.scope===currentScope)); renderList(); }
-tickClocks();
-</script>
-</body>
-</html>
+      <button id="addBtn" class="primary
