--- a/index.html
+++ b/index.html
@@ -76,26 +76,25 @@
 </div>
 
 <script>
-/* run ONLY after the page exists, so this works even if the script sits high up */
+/* run after the page exists */
 window.addEventListener('DOMContentLoaded', () => {
-  /* Badge */
   document.getElementById("jsok").textContent = "JS: OK";
 
-  /* Alt1 identify (hardcoded) */
+  /* Alt1 hook (hardcoded) */
   try { if (window.alt1 && alt1.identifyAppUrl) { alt1.identifyAppUrl("https://hacza.github.io/RS3-Reset-Tracker.2/appconfig.json"); } } catch(e){}
 
-  /* ----- State ----- */
+  /* ======= State ======= */
   const LS_KEY = "rs3_resets_tracker_v1";
   let state = load() || initDefault();
   let currentScope = "daily";
 
-  /* ----- Elements ----- */
+  /* ======= Elements ======= */
   const el = (id) => document.getElementById(id);
   const listEl = el("list");
   const tabs = Array.from(document.querySelectorAll(".tab"));
   const profileSel = el("profile");
 
-  /* ----- Profiles ----- */
+  /* ======= Profiles ======= */
   function refreshProfiles() {
     profileSel.innerHTML = "";
     state.profiles.forEach((p,i) => {
@@ -121,7 +120,7 @@ window.addEventListener('DOMContentLoaded', () => {
   };
   profileSel.onchange = () => { state.currentProfile = profileSel.value; save(); render(); };
 
-  /* ----- Tabs ----- */
+  /* ======= Tabs ======= */
   tabs.forEach(t => t.onclick = () => {
     tabs.forEach(x=>x.classList.remove("active"));
     t.classList.add("active");
@@ -129,7 +128,7 @@ window.addEventListener('DOMContentLoaded', () => {
     renderList();
   });
 
-  /* ----- Add & edit ----- */
+  /* ======= Add & edit ======= */
   el("addBtn").onclick = addItem;
   el("addText").addEventListener("keydown", e => { if (e.key === "Enter") addItem(); });
   function addItem() {
@@ -143,7 +142,7 @@ window.addEventListener('DOMContentLoaded', () => {
     save(); renderList();
   }
 
-  /* ----- List render (checkbox + delete + drag) ----- */
+  /* ======= List render (checkbox + delete + drag) ======= */
   function renderList() {
     const arr = getScopeArr();
     listEl.innerHTML = "";
@@ -194,51 +193,66 @@ window.addEventListener('DOMContentLoaded', () => {
     });
   }
 
-  /* ----- Import EVERYTHING from DailyScape ----- */
+  /* ======= IMPORT FROM DAILYSCAPE (JSONP style) ======= */
   document.getElementById("importDailyScape").onclick = async () => {
     const BTN = document.getElementById("importDailyScape");
     const prev = BTN.textContent; BTN.textContent = "Importing…"; BTN.disabled = true;
 
+    // we’ll load their JS file as a <script>, which sets window.rsapidata
     const SOURCES = [
-      "https://raw.githubusercontent.com/dailyscape/rsdata/main/rsdata.js",
+      "https://dailyscape.github.io/rsdata/rsdata.js",
       "https://cdn.jsdelivr.net/gh/dailyscape/rsdata@main/rsdata.js",
       "https://raw.githack.com/dailyscape/rsdata/main/rsdata.js",
       "https://cdn.statically.io/gh/dailyscape/rsdata/main/rsdata.js"
     ];
 
     try {
-      let raw = null, used = null, lastErr = null;
+      let ds = null, used = null, lastErr = null;
+
       for (const base of SOURCES) {
-        const url = base + "?t=" + Date.now();
-        try {
-          const r = await fetch(url, { cache: "no-store" });
-          if (!r.ok) throw new Error(r.status + " " + r.statusText);
-          raw = await r.text(); used = base; break;
-        } catch (e) { lastErr = e; }
-      }
-      if (!raw) throw new Error("All sources failed: " + (lastErr && lastErr.message));
+        // clean any previous value
+        try { delete window.rsapidata; } catch {}
+        const src = base + "?t=" + Date.now();
 
-      const rx = /(?:(?:export\s+)?(?:var|let|const)\s+)?rsapidata\s*=\s*({[\s\S]*?});/;
-      let objSrc = (raw.match(rx) || [])[1];
-      let ds;
-      if (objSrc) {
-        ds = Function('"use strict"; return (' + objSrc + ')')();
-      } else {
-        ds = Function('"use strict";' + raw + ';return (typeof rsapidata!=="undefined"?rsapidata:null);')();
-        if (!ds) throw new Error("Couldn't find rsapidata in rsdata.js (" + used + ")");
+        // load as <script>
+        await new Promise((resolve, reject) => {
+          const s = document.createElement("script");
+          s.src = src;
+          s.async = true;
+          s.onload = () => resolve();
+          s.onerror = () => reject(new Error("script load failed"));
+          document.head.appendChild(s);
+        }).catch(e => { lastErr = e; });
+
+        // did it set window.rsapidata?
+        if (window.rsapidata && typeof window.rsapidata === "object") {
+          ds = window.rsapidata;
+          used = base;
+          break;
+        }
       }
 
+      if (!ds) throw new Error("Couldn't read DailyScape data (" + (lastErr && lastErr.message || "no data") + ")");
+
+      // normalize to {name, url}
       const norm = (arr = []) => arr.map(x => ({
         name: (x?.name || x?.item || x?.title || "").trim(),
         url:  (x?.wiki || x?.url || x?.link || "").trim()
       })).filter(t => t.name);
 
-      const dailyAll   = [...norm(ds.dailies || ds.daily), ...norm(ds.gathering || ds.dailyGathering)];
-      const weeklyAll  = norm(ds.weeklies || ds.weekly);
-      const monthlyAll = norm(ds.monthlies || ds.monthly);
+      // accept both singular/plural keys they use
+      const dailySrc   = ds.dailies || ds.daily || [];
+      const gatherSrc  = ds.gathering || ds.dailyGathering || [];
+      const weeklySrc  = ds.weeklies || ds.weekly || [];
+      const monthlySrc = ds.monthlies || ds.monthly || [];
+
+      const dailyAll   = [...norm(dailySrc), ...norm(gatherSrc)];
+      const weeklyAll  = norm(weeklySrc);
+      const monthlyAll = norm(monthlySrc);
 
       const found = { daily: dailyAll.length, weekly: weeklyAll.length, monthly: monthlyAll.length };
 
+      // merge into your profile (skip duplicates by name)
       const added = { daily:0, weekly:0, monthly:0 };
       const buckets = { daily: dailyAll, weekly: weeklyAll, monthly: monthlyAll };
       ["daily","weekly","monthly"].forEach(scope => {
@@ -255,7 +269,7 @@ window.addEventListener('DOMContentLoaded', () => {
       });
 
       save(); renderList();
-      alert(`Imported from DailyScape\nFound: ${found.daily} daily, ${found.weekly} weekly, ${found.monthly} monthly.\nAdded: ${added.daily} daily, ${added.weekly} weekly, ${added.monthly} monthly.`);
+      alert(`Imported from DailyScape\nFound: ${found.daily} daily, ${found.weekly} weekly, ${found.monthly} monthly.\nAdded: ${added.daily} daily, ${added.weekly} weekly, ${added.monthly} monthly.\nSource: ${used}`);
     } catch (e) {
       console.error(e);
       alert("Import failed: " + e.message);
@@ -264,7 +278,7 @@ window.addEventListener('DOMContentLoaded', () => {
     }
   };
 
-  /* ----- Reset timers (UTC) ----- */
+  /* ======= Reset timers (UTC) ======= */
   function nextDailyUTC(now=new Date())   { return new Date(Date.UTC(now.getUTCFullYear(), now.getUTCMonth(), now.getUTCDate()+1, 0,0,0)); }
   function nextWeeklyUTC(now=new Date())  { const day = now.getUTCDay(); const daysToWed = (3 - day + 7) % 7 || 7; return new Date(Date.UTC(now.getUTCFullYear(), now.getUTCMonth(), now.getUTCDate()+daysToWed, 0,0,0)); }
   function firstOfNextMonthUTC(now=new Date()) { const y=now.getUTCFullYear(), m=now.getUTCMonth(); return new Date(Date.UTC(m===11?y+1:y, (m+1)%12, 1, 0,0,0)); }
@@ -292,7 +306,7 @@ window.addEventListener('DOMContentLoaded', () => {
   }
   function eta(ms) { if (ms<0) ms=0; const s=Math.floor(ms/1000); const h=String(Math.floor(s/3600)).padStart(2,"0"); const m=String(Math.floor((s%3600)/60)).padStart(2,"0"); const ss=String(s%60).padStart(2,"0"); return `${h}:${m}:${ss}`; }
 
-  /* ----- Helpers ----- */
+  /* ======= Helpers ======= */
   function initDefault() {
     return {
       currentProfile: "0",
@@ -307,7 +321,7 @@ window.addEventListener('DOMContentLoaded', () => {
   function load(){ try { return JSON.parse(localStorage.getItem(LS_KEY)); } catch { return null; } }
   function save(){ localStorage.setItem(LS_KEY, JSON.stringify(state)); }
 
-  /* ----- Boot ----- */
+  /* boot */
   refreshProfiles(); render(); tickClocks();
   function render(){ refreshProfiles(); tabs.forEach(t => t.classList.toggle("active", t.dataset.scope===currentScope)); renderList(); }
 });
